# raise

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yaml  nginx.conf
.github/githubdocs/: config_example.toml
.github/workflows/: conventional_commits.yaml  review.yaml  suggest-readme-updates.lock.yml  suggest-readme-updates.md
backend/: Dockerfile  pyproject.toml  start.sh
backend/dataminer_api/: settings.py
backend/github/: tasks.py  urls.py
backend/github/miners/: base.py  commits.py  issues.py  pull_requests.py
backend/jira/: miner.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  run.sh  tsconfig.json
frontend/.storybook/: main.ts  preview.tsx
frontend/src/: index.css  layout.tsx  main.tsx  router.tsx
frontend/src/api/: apiClient.ts
frontend/src/components/: Sidebar.tsx
frontend/src/components/Sidebar/: Sidebar.tsx  SidebarNavItem.tsx
frontend/src/components/button/: button.stories.tsx  button.tsx
frontend/src/components/code-preview-modal/: CodePreviewModal.stories.tsx  CodePreviewModal.tsx  index.ts
frontend/src/components/collect/: CollectActions.stories.tsx  CollectActions.tsx  CollectDateSection.stories.tsx  CollectDateSection.tsx  CollectFormModal.stories.tsx  CollectFormModal.tsx  CollectHeader.stories.tsx  CollectHeader.tsx  CollectTagsSection.stories.tsx  CollectTagsSection.tsx  CollectWrapper.stories.tsx  CollectWrapper.tsx  index.ts
frontend/src/components/column-visibility-filter/: ColumnVisibilityFilter.stories.tsx  ColumnVisibilityFilter.tsx  index.ts
frontend/src/components/form/: FormDateSelector.stories.tsx  FormDateSelector.tsx  FormFieldBase.stories.tsx  FormFieldBase.tsx  FormInput.stories.tsx  FormInput.tsx  FormSelect.stories.tsx  FormSelect.tsx  formStyles.ts  (+2 more)
frontend/src/contexts/: SourceContext.tsx  ThemeContext.tsx
frontend/src/data/: README.md  index.ts
frontend/src/lib/: source-section-resolver.ts  theme-context.tsx
frontend/src/pages/: CollectPage.tsx  JobsPage.tsx  NotFound.tsx  OverviewPage.tsx  PreviewPage.tsx
frontend/src/services/: README.md  endpoints.ts  githubService.ts  index.ts  jiraService.ts  jobsService.ts  shared.ts  stackoverflowService.ts
frontend/src/sidebar/: Sidebar.tsx  sidebarNavigation.ts
frontend/src/sources/: index.ts  registry.ts
modules/bank/: main.py
(+154 files in other folders)
