[project]
name = "raise"
version = "2026.1.0"
description = "An application designed to facilitate mining software engineering related data from several platforms such as GitHub, Jira and Stack Overflow."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amqp==5.2.0",
    "asgiref==3.8.1",
    "babel==2.15.0",
    "beautifulsoup4==4.12.2",
    "billiard==4.2.0",
    "celery==5.4.0",
    "certifi==2024.7.4",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "customtkinter==5.2.2",
    "darkdetect==0.8.0",
    "django==5.1.8",
    "django-cors-headers==4.7.0",
    "django-filter==24.1",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "drf-spectacular==0.27.1",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "gunicorn==23.0.0",
    "idna==3.7",
    "keyboard==0.13.5",
    "kombu==5.4.0",
    "lizard==1.17.10",
    "lxml>=6.0.2",
    "maturin==1.7.4",
    "packaging==24.1",
    "pillow==10.4.0",
    "prompt-toolkit==3.0.47",
    "psutil==6.0.0",
    "pydriller==2.6",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.1",
    "redis==5.1.1",
    "regex==2024.5.15",
    "requests==2.32.3",
    "selenium==4.15.0",
    "six==1.16.0",
    "smmap==5.0.1",
    "sqlparse==0.5.1",
    "tkcalendar==1.6.1",
    "tqdm==4.66.4",
    "types-pytz==2024.1.0.20240417",
    "tzdata==2024.1",
    "urllib3==2.2.2",
    "vine==5.1.0",
    "wcwidth==0.2.13",
]
