[project]
name = "raise"
version = "2026.1.0"
description = "An application designed to facilitate mining software engineering related data from several platforms such as GitHub, Jira and Stack Overflow."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.14.3",
    "celery[redis]==5.6.3",
    "django==6.0.3",
    "django-cors-headers==4.9.0",
    "django-filter==25.2",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.29.0",
    "gitpython==3.1.46",
    "psycopg[binary]==3.3.3",
    "pydriller==2.9",
    "requests==2.33.1",
    "selenium==4.41.0",
]
